# Anticipated-VINS-Mono

./: README.md
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml
config/vnav/: bottom.yaml  forward.yaml
feature_tracker/: CMakeLists.txt  README.md  package.xml
feature_tracker/config/: bottom.yaml  euroc.yaml  forward.yaml
feature_tracker/include/anticipation/: attention_viewer_ros.h  cvmodified.h  feature_tracker.h  feature_tracker_ros.h  tic_toc.h
feature_tracker/src/: attention_viewer_node.cpp  attention_viewer_ros.cpp  cvmodified.cpp  feature_tracker.cpp  feature_tracker_node.cpp  feature_tracker_ros.cpp
support_files/analysis/: .gitignore  README.md  anaylsis.ipynb
support_files/report/: .gitignore  clean_latex.sh  main.dvi  main.tex  math.tex  refs.bib  root.dvi
support_files/report/paper/: abstract.tex  anticipation.tex  conclusion.tex  introduction.tex  notes_on_attn_alg.tex  results.tex  vinsmono.tex
support_files/results/: plotting.py
support_files/scripts/: attention_feature_selection.py  createMatricesLinearImuFactor.m  plotCost.m  test_ccT.m  timing.m
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch  vnav.launch
vins_estimator/lib/nanoflann/: git  nanoflann.hpp
vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  feature_selector.cpp  feature_selector.h  parameters.cpp  parameters.h
vins_estimator/src/utility/: csviterator.h  horizon_generator.cpp  horizon_generator.h  state_defs.h  utility.h  visualization.cpp  visualization.h
