<?xml version="1.0"?>
<package format="2">
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>Anticipation in feature selection</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>camera_model</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
